fix(cta-block): added padding on mobile breakpoint (#6330)
### Related Ticket(s)

https://github.com/carbon-design-system/carbon-for-ibm-dotcom/issues/6073

### Description

There was missing padding on mobile breakpoint causing the cta block to line up directly on the left of the page with 0px between

<!-- React and Web Component deploy previews are enabled by default. -->
<!-- To enable additional available deploy previews, apply the following -->
<!-- labels for the corresponding package: -->
<!-- *** "package: services": Services -->
<!-- *** "package: utilities": Utilities -->
<!-- *** "package: styles": Carbon Expressive -->
<!-- *** "RTL": React / Web Components (RTL) -->
<!-- *** "feature flag": React / Web Components (experimental) -->

--- a/packages/web-components/src/components/cta-block/cta-block.scss
+++ b/packages/web-components/src/components/cta-block/cta-block.scss
@@ -13,6 +13,12 @@
   @include cta-block--pattern;
 
   .#{$prefix}--content-layout {
+    @include carbon--breakpoint('md') {
+      padding-left: 0;
+    }
+    @include carbon--breakpoint('sm') {
+      padding-left: $carbon--layout-01;
+    }
     ::slotted([slot]) {
       margin-left: 0;
       margin-right: 0;
